# asm_web_debug

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  manage.py  pyproject.toml  run_develop.sh
.github/workflows/: deploy_test_main.yml  selenium_test_pr.yml
apache_conf/: asm.moevm.info.conf
app/: __init__.py  __main__.py  cli.py  config.py  ltiutils.py  main.py  models.py  testdata.py
app/core/: asmanager.py
app/routes/: __init__.py  admin.py  admin_view.py  assignments.py  auth.py  codes.py  debug.py  index.py  internal.py  logs.py  lti.py  oldadmin.py  solution.py  solutions.py  tasks.py  welcome.py
app/templates/: base.html  header.html
codes/07cff1e9-9074-47ff-b363-2f4ddc707e32/: main.S
codes/0e9dd5f5-78ba-4f67-9bd4-f47c6011a84a/: main.S
codes/3d6b7088-6668-41c8-939b-08afc123acc5/: main.S
codes/a5351418-e8d8-4162-adcb-baf7e51de42c/: main.S
codes/b81f3f3c-8e21-4724-9cce-82411cb52155/: main.S
docker/: develop.docker-compose.yml  executor.dockerfile  nginx.conf  nginx.dockerfile  production.docker-compose.yml  prometheus.dockerfile  prometheus.yml  runner.dockerfile  web.dockerfile
playground/: gbd_wrapper.py  gdb_wrapper.py  test_gdb_wrapper.py
runner/: __main__.py  checkerlib.py  debugger.py  docker.py  gdbmi.py  main.py  metrics.py  monitoring.py  routes.py  runner.py  settings.py  views.py  wsinteractor.py
runner/checkers/: simple.py  (+3 more)
scripts/: build_info.sh  env_configure.sh  install_gdb.sh  local_start.sh  run_selenium.sh  setup_apache_config.sh  start_deploy.sh
src/: config.py  requirements.txt  run.py
(+168 files in other folders)
