[tool.poetry]
name = "asm_web_debug"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"
Flask-Login = "^0.5.0"
lti = "^0.9.5"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
waitress = "^2.0.0"
Flask-WTF = "^1.0.0"
passlib = "^1.7.4"
Flask-Admin = "^1.6.0"
requests = "^2.27.1"
Flask-SQLAlchemy = "^2.5.1"
psycopg2-binary = "^2.9.3"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]
selenium = "^4.1.0"
webdriver-manager = "^3.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
